# Zebrafish

./: .gitignore  6Jan2020-hexagonal-plus-lines.tif  CMakeLists.txt  Info.plist  README.md
Cpp/: Bspline.cpp  Bspline.h  CMakeLists.txt  Cage.cpp  Cage.h  Common.h  Cylinder.cpp  Cylinder.h  ICP.cpp  ICP.h  OpticalFlow.cpp  OpticalFlow.h  Padding.cpp  Padding.h  Quad.ipp  Quadrature.cpp  Quantile.cpp  Quantile.h  common.cpp  common.h  main.cpp  main_gui.cpp  main_origin.cpp  test.cpp
Cpp/gui/: GUI.cpp  GUI.h  GUI_depthCorrection.cpp  GUI_markerDrag.cpp  GUI_mask.cpp  GUI_stage0.cpp  GUI_stage1.cpp  GUI_stage2.cpp  GUI_stage3.cpp  GUI_stage4.cpp  GUI_stage5.cpp  GUI_stage6.cpp  GUI_stage7.cpp  GUI_stage8.cpp  GUI_visualization.cpp
Cpp/test/: BFGSTest.cpp  BFGSTest_image.cpp  CylinderSpeedTest.cpp  CylinderTest.cpp  CylinderTest_image.cpp  CylinderVisualization.cpp  CylinderVisualization_image.cpp  GradientTest.cpp  ICPTest.cpp  InterpTest.cpp  InterpVisualization.cpp  InterpVisualization_image.cpp  OptSearchTest.cpp  ParaCylinderSpeedTest.cpp  ParaCylinderTest.cpp  ParaGridSearchOptimization_image.cpp  ParaGridSearch_image.cpp  ParaInterpTest.cpp  README.md
Cpp/utils/: CMakeLists.txt  Logger.cpp  TiffReader.cpp  TiffReader.h  VTUwriter.cpp  VTUwriter.h  base64Layer.cpp  base64Layer.h
Cpp/utils/LBFGSpp/: CMakeLists.txt
Matlab Scripts/: BlobDetector.asv  BlobDetector.m  ClusterResults.m  CompareOptimizationMethods.m  DetectionInFrame1.fig  DotPlot.m  EvaluateCylinder.m  GaussianPrecisionTest.m  GaussianSigmaFun.m  GenerateTestCylinder.m  GlobalFigureAllFrame.m  GlobalImage.m  ImshowOrth.asv  ImshowOrth.m  LoGFilter.asv  LoGFilter.m  LoGParameter.asv  LoGParameter.m  NearestCluster.m  RefineLocation.m  SampleCylinder.m  SampleCylinderHelper.m  ScorePoints.m  ScorePoints2.m  TestMatScript.m  VisInterp.m  blobDetect.asv  fun.m  global-Mar-2-2020.mat  imshowTiff.m  once.mat  readMultipageTiff.m  readMultipageTiff.m~  runOpticalFlow.m  selectTiff.m  selectTiff.m~  surface.fig  temp.m  test.asv  test.m  (+3 more)
Matlab Scripts/icp/: GetRawLoc.m
MatlabScripts/: BlobDetector.m  CorrectionInFrame2.fig  GaussianFilter.m  GaussianFun.m  GaussianParameter.m  GaussianPrecisionTest.m  GaussianSigmaFun.m  GenerateTestCylinder.m  ImshowOrth.m  ImshowTiff.m  LoGParameter.m  NearestCluster.m  README.md  ReadMultipageTiff.m  ReadTimeZStackTiff.m  ReadZstackTiff.m  SampleCylinder.m  SampleCylinderHelper.m  StartPointEffect.m  SubtractionSigma.m  SurfXY.m  TestMatScript.m  VisInterp.m  cellogram2_Nov_29.mat  fun.m  func.m  global1.fig  paperplot.m  realDot.mat  runCrunchy.m  runOpticalFlow.m  seven.mat  test1.m  test2.m  test3.m
MatlabScripts/Cellogram2/: step1.m  step2.m  step3.m  step4.m  step_plot.m
MatlabScripts/CppHelper/: DJSet.m  ExtractPatternOFF.m  FilterPoints.m  PlotDepthCorrection.m  SubplotDepthCorrection.m
MatlabScripts/OpticalFlow/: HS3D.m
MatlabScripts/icp/: icp.m  runICP.m
MatlabScripts/optimization/: EnergyVsXY.m  InterpVsXY.m  convZone.m
MatlabScripts/spline/: BasisFuncCalculator.m  BasisFuncCalculatorRecord.m  CppInterpVis.m  basisPlot.m  basisfunc.m  heatmap.m  interp3D.m  interp3DLeastSquare.m  interpSP.m  run1DTest.m  run3DTest.m  run3DTestLeastSquare.m  runSurfaceTest.m  runSurfaceTestLeastSquare.m  test_fit.m
analysis/: CMakeLists.txt  MeshUtils.cpp  MeshUtils.h  main.cpp  remesh_adaptive.cpp  remesh_adaptive.h  zebra-analysis.cpp  zebra-analysis.hpp
cmake/: ZebraFishDependencies.cmake  ZebraFishDownloadExternal.cmake  ZebraFishUtils.cmake
python/: main.ipynb
python/ShellUtils/: Gen.py  Geometry.py  PrismPlot.m  TriMesh.py  Visual.py  temp.m
python/ShellUtils/.ipynb_checkpoints/: Gen-checkpoint.py  TriMesh-checkpoint.py  Visual-checkpoint.py
resources/: depth_demo.mov
split/: main.cpp
tests/: CMakeLists.txt  CageTest.cpp  CylinderTest.cpp  InterpTest.cpp  PaddingTest.cpp  PointMeshDistance.cpp  WindingTest.cpp  test.cpp
tiff/: Makefile  tiffReader  tiffReader.cpp
tiff/tiff-4.1.0/: Makefile  config.status  libtiff-4.pc  libtool
tiff/tiff-4.1.0/contrib/: Makefile
tiff/tiff-4.1.0/contrib/addtiffo/: Makefile  addtiffo
tiff/tiff-4.1.0/contrib/dbs/: Makefile  tiff-bi  tiff-grayscale  tiff-palette  tiff-rgb
tiff/tiff-4.1.0/contrib/iptcutil/: Makefile  iptcutil
tiff/tiff-4.1.0/contrib/mfs/: Makefile
tiff/tiff-4.1.0/contrib/pds/: Makefile
tiff/tiff-4.1.0/contrib/ras/: Makefile
tiff/tiff-4.1.0/contrib/stream/: Makefile
tiff/tiff-4.1.0/contrib/tags/: Makefile
tiff/tiff-4.1.0/contrib/win_dib/: Makefile
tiff/tiff-4.1.0/html/: Makefile
tiff/tiff-4.1.0/html/images/: Makefile
tiff/tiff-4.1.0/html/man/: Makefile
tiff/tiff-4.1.0/libtiff/: Makefile  libtiff.la  libtiffxx.la  mkg3states  tif_config.h
tiff/tiff-4.1.0/libtiff/.deps/: mkg3states.Po  tif_aux.Plo  tif_close.Plo  tif_codec.Plo  tif_color.Plo  tif_compress.Plo  tif_dir.Plo  tif_dirinfo.Plo  tif_dirread.Plo  tif_dirwrite.Plo  tif_dumpmode.Plo  tif_error.Plo  tif_extension.Plo  tif_fax3.Plo  tif_flush.Plo  tif_getimage.Plo  tif_jbig.Plo  tif_jpeg.Plo  tif_jpeg_12.Plo  tif_luv.Plo  tif_lzma.Plo  tif_lzw.Plo  tif_next.Plo  tif_ojpeg.Plo  tif_open.Plo  tif_packbits.Plo  tif_pixarlog.Plo  tif_predict.Plo  tif_print.Plo  tif_read.Plo  tif_stream.Plo  tif_strip.Plo  tif_swab.Plo  tif_thunder.Plo  tif_tile.Plo  tif_unix.Plo  tif_version.Plo  tif_warning.Plo  tif_webp.Plo  tif_write.Plo  (+2 more)
tiff/tiff-4.1.0/libtiff/.libs/: libtiff.5.dylib  libtiff.lai  libtiffxx.5.dylib  libtiffxx.lai
tiff/tiff-4.1.0/man/: Makefile
tiff/tiff-4.1.0/port/: Makefile  libport.la
tiff/tiff-4.1.0/test/: Makefile
tiff/tiff-4.1.0/tools/: Makefile  fax2ps  fax2tiff  pal2rgb  ppm2tiff  raw2tiff  tiff2bw  tiff2pdf  tiff2ps  tiff2rgba  tiffcmp  tiffcp  tiffcrop  tiffdither  tiffdump  tiffinfo  tiffmedian  tiffset  tiffsplit
tiff/tiff-4.1.0/tools/.deps/: fax2ps.Po  fax2tiff.Po  pal2rgb.Po  ppm2tiff.Po  raw2tiff.Po  tiff2bw.Po  tiff2pdf.Po  tiff2ps.Po  tiff2rgba.Po  tiffcmp.Po  tiffcp.Po  tiffcrop.Po  tiffdither.Po  tiffdump.Po  tiffinfo.Po  tiffmedian.Po  tiffset.Po  tiffsplit.Po
(+33 files in other folders)
